--- a/test1/MainWindow.ui
+++ b/test1/MainWindow.ui
@@ -46,6 +46,7 @@
      </property>
      <property name="font">
       <font>
+       <pointsize>12</pointsize>
        <bold>true</bold>
       </font>
      </property>
