--- a/test1/MainWindow.ui
+++ b/test1/MainWindow.ui
@@ -168,19 +168,6 @@
       <string>TEC 7</string>
      </property>
     </widget>
-    <widget class="QCheckBox" name="checkBoxTEC8">
-     <property name="geometry">
-      <rect>
-       <x>320</x>
-       <y>40</y>
-       <width>71</width>
-       <height>16</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>TEC 8</string>
-     </property>
-    </widget>
     <widget class="QPushButton" name="buttonRefresh">
      <property name="geometry">
       <rect>
@@ -879,6 +866,49 @@
       </item>
      </layout>
     </widget>
+    <widget class="QWidget" name="horizontalLayoutWidget">
+     <property name="geometry">
+      <rect>
+       <x>270</x>
+       <y>10</y>
+       <width>361</width>
+       <height>32</height>
+      </rect>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayoutTop">
+      <property name="spacing">
+       <number>5</number>
+      </property>
+      <property name="leftMargin">
+       <number>5</number>
+      </property>
+      <item>
+       <widget class="QCheckBox" name="checkBoxTEC8">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButtonTEC8">
+        <property name="maximumSize">
+         <size>
+          <width>50</width>
+          <height>30</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>10</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>TEC 8</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
    </widget>
    <widget class="QToolButton" name="buttonQuit">
     <property name="geometry">
@@ -1177,7 +1207,6 @@
   <tabstop>checkBoxTEC5</tabstop>
   <tabstop>checkBoxTEC6</tabstop>
   <tabstop>checkBoxTEC7</tabstop>
-  <tabstop>checkBoxTEC8</tabstop>
   <tabstop>checkboxTECLockAll</tabstop>
   <tabstop>textTECName</tabstop>
   <tabstop>buttonQuit</tabstop>
@@ -1384,8 +1413,8 @@
    <slot>checkTEC8(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>489</x>
-     <y>145</y>
+     <x>442</x>
+     <y>120</y>
     </hint>
     <hint type="destinationlabel">
      <x>760</x>
@@ -1889,6 +1918,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>pushButtonTEC8</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>openTEC8()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>727</x>
+     <y>126</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>745</x>
+     <y>51</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>checkTEC0(bool)</slot>
@@ -1966,5 +2011,6 @@
   <slot>tec1TempM()</slot>
   <slot>sht85Temp()</slot>
   <slot>sht85RH()</slot>
+  <slot>openTEC8()</slot>
  </slots>
 </ui>
