--- a/test1/TECDisplay.ui
+++ b/test1/TECDisplay.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>300</width>
-    <height>625</height>
+    <height>560</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -19,14 +19,51 @@
   <property name="maximumSize">
    <size>
     <width>300</width>
-    <height>700</height>
+    <height>660</height>
    </size>
+  </property>
+  <property name="palette">
+   <palette>
+    <active>
+     <colorrole role="Window">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>240</red>
+        <green>194</green>
+        <blue>130</blue>
+       </color>
+      </brush>
+     </colorrole>
+    </active>
+    <inactive>
+     <colorrole role="Window">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>236</red>
+        <green>236</green>
+        <blue>236</blue>
+       </color>
+      </brush>
+     </colorrole>
+    </inactive>
+    <disabled>
+     <colorrole role="Window">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>240</red>
+        <green>194</green>
+        <blue>130</blue>
+       </color>
+      </brush>
+     </colorrole>
+    </disabled>
+   </palette>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <property name="windowOpacity">
-   <double>100.000000000000000</double>
+   <double>50.000000000000000</double>
   </property>
   <property name="autoFillBackground">
    <bool>true</bool>
@@ -34,8 +71,8 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>10</y>
+     <x>140</x>
+     <y>0</y>
      <width>71</width>
      <height>32</height>
     </rect>
@@ -48,16 +85,20 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>40</y>
-     <width>231</width>
-     <height>581</height>
+     <y>30</y>
+     <width>181</width>
+     <height>531</height>
     </rect>
    </property>
-   <layout class="QGridLayout" name="gridLayout">
+   <layout class="QGridLayout" name="gridLayout" rowminimumheight="0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0">
+    <property name="verticalSpacing">
+     <number>0</number>
+    </property>
     <item row="11" column="0">
      <widget class="QLabel" name="label_11">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -70,6 +111,7 @@
      <widget class="QLabel" name="label_14">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -82,6 +124,7 @@
      <widget class="QLineEdit" name="value_16">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -91,6 +134,7 @@
      <widget class="QLabel" name="label_12">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -112,6 +156,7 @@
      <widget class="QLabel" name="label_09">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -124,6 +169,7 @@
      <widget class="QLabel" name="label_08">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -136,6 +182,7 @@
      <widget class="QLineEdit" name="value_07">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -145,6 +192,7 @@
      <widget class="QLabel" name="label_15">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -157,6 +205,7 @@
      <widget class="QLineEdit" name="value_11">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -166,6 +215,7 @@
      <widget class="QLabel" name="label_16">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -178,6 +228,7 @@
      <widget class="QLineEdit" name="value_04">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -187,6 +238,7 @@
      <widget class="QLabel" name="label_06">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -199,6 +251,7 @@
      <widget class="QLineEdit" name="value_17">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -208,6 +261,7 @@
      <widget class="QLineEdit" name="value_03">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -217,6 +271,7 @@
      <widget class="QLineEdit" name="value_06">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -226,6 +281,7 @@
      <widget class="QLabel" name="label_13">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -238,6 +294,7 @@
      <widget class="QLineEdit" name="value_18">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -247,6 +304,7 @@
      <widget class="QLabel" name="label_02">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -259,6 +317,7 @@
      <widget class="QLineEdit" name="value_15">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -268,6 +327,7 @@
      <widget class="QLineEdit" name="value_12">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -277,6 +337,7 @@
      <widget class="QLineEdit" name="value_09">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -286,6 +347,7 @@
      <widget class="QLabel" name="label_04">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -298,6 +360,7 @@
      <widget class="QLabel" name="label_10">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -310,6 +373,7 @@
      <widget class="QLineEdit" name="value_10">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -319,6 +383,7 @@
      <widget class="QLineEdit" name="value_02">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -328,6 +393,7 @@
      <widget class="QLabel" name="label_01">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -340,6 +406,7 @@
      <widget class="QLineEdit" name="value_13">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -349,6 +416,7 @@
      <widget class="QLabel" name="label_17">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -361,6 +429,7 @@
      <widget class="QLabel" name="label_03">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -373,6 +442,7 @@
      <widget class="QLineEdit" name="value_01">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -382,6 +452,7 @@
      <widget class="QLineEdit" name="value_08">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -391,6 +462,7 @@
      <widget class="QLabel" name="label_00">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -403,6 +475,7 @@
      <widget class="QLineEdit" name="value_14">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -412,6 +485,7 @@
      <widget class="QLabel" name="label_05">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -424,6 +498,7 @@
      <widget class="QLabel" name="label_18">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -436,6 +511,7 @@
      <widget class="QLineEdit" name="value_05">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -445,6 +521,7 @@
      <widget class="QLabel" name="label_07">
       <property name="font">
        <font>
+        <family>Arial</family>
         <pointsize>10</pointsize>
        </font>
       </property>
@@ -459,7 +536,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>20</y>
+     <y>10</y>
      <width>58</width>
      <height>16</height>
     </rect>
